--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: valgrind
 Section: devel
 Priority: optional
 Maintainer: Andrés Roldán <aroldan@debian.org>
-Build-Depends: debhelper (>> 3.0.0), libc6-dev (>> 2.3.0), autotools-dev, dpatch (>> 2.0.0), gdb, gcc-multilib [amd64], libc6-dev-i386 (>> 2.3.0) [amd64], docbook, docbook-xsl, docbook-xml, xsltproc
+Build-Depends: debhelper (>> 3.0.0), libc6-dev (>> 2.3.0), autotools-dev, gdb, gcc-multilib [amd64], libc6-dev-i386 (>> 2.3.0) [amd64], docbook, docbook-xsl, docbook-xml, xsltproc
 Standards-Version: 3.7.3.0
 
 Package: valgrind
