--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,9 @@ Uploaders: Pierre Habouzit <madcoder@debian.org>
 Build-Depends: debhelper (>> 3.0.0), libc6-dev (>> 2.3.0), autotools-dev,
   gdb, gcc-multilib [amd64], libc6-dev-i386 (>> 2.3.0) [amd64], docbook,
   docbook-xsl, docbook-xml, xsltproc
-Standards-Version: 3.7.3.0
+Standards-Version: 3.9.1
+Vcs-Browser: http://git.debian.org/?p=collab-maint/valgrind.git;a=summary
+Vcs-Git: git://git.debian.org/git/collab-maint/valgrind.git
 
 Package: valgrind
 Architecture: i386 amd64 powerpc arm
@@ -31,3 +33,4 @@ Description: A memory debugger and profiler
  activities such as dynamic error detection and profiling. The Valgrind
  distribution currently includes three tools: a memory error detectors, a
  cache (time) profiler and a heap (space) profiler.
+Homepage: http://www.valgrind.org/
