--- a/debian/control
+++ b/debian/control
@@ -6,13 +6,13 @@ Uploaders: Pierre Habouzit <madcoder@debian.org>
 Build-Depends: debhelper (>> 3.0.0), libc6-dev (>> 2.3.0), autotools-dev,
   gdb, gcc-multilib [amd64], libc6-dev-i386 (>> 2.3.0) [amd64], docbook,
   docbook-xsl, docbook-xml, xsltproc
-Standards-Version: 3.9.1
+Standards-Version: 3.9.2
 Vcs-Browser: http://git.debian.org/?p=collab-maint/valgrind.git;a=summary
 Vcs-Git: git://git.debian.org/git/collab-maint/valgrind.git
 
 Package: valgrind
 Architecture: i386 amd64 powerpc arm
-Depends: ${shlibs:Depends}, libc6-dbg
+Depends: ${misc:Depends}, ${shlibs:Depends}, libc6-dbg
 Conflicts: valgrind-callgrind
 Provides: valgrind-callgrind
 Suggests: kcachegrind, alleyoop, valkyrie (>> 1.3.0)
