--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Conflicts: valgrind-callgrind
 Provides: valgrind-callgrind
 Suggests: kcachegrind, alleyoop, valkyrie (>> 1.3.0)
 Recommends: gdb
-Description: A memory debugger and profiler
+Description: memory debugger and profiler
  Valgrind is a GPL'd tool to help you find memory-management problems in your
  programs. When a program is run under Valgrind's supervision, all reads and
  writes of memory are checked, and calls to malloc/new/free/delete are
