Do strip what is strippable.
Signed-off-by: Pierre Habouzit <madcoder@debian.org>

--- a/debian/rules
+++ b/debian/rules
@@ -82,7 +82,7 @@ binary-arch: build install
 	dh_installmenu
 	dh_installchangelogs NEWS
 	dh_link
-	#dh_strip
+	dh_strip -Xusr/lib/valgrind
 	dh_compress
 	dh_fixperms
 	dh_installdeb
