--- a/debian/rules
+++ b/debian/rules
@@ -80,7 +80,7 @@ binary-arch: build install
 	dh_installmenu
 	dh_installchangelogs NEWS
 	dh_link
-	dh_strip -Xusr/lib/valgrind
+	dh_strip
 	dh_compress
 	dh_fixperms
 	dh_installdeb
