--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/valgrind.git;a=summary
 Vcs-Git: git://git.debian.org/git/collab-maint/valgrind.git
 
 Package: valgrind
-Architecture: i386 amd64 powerpc armel armhf
+Architecture: i386 amd64 s390 powerpc armel armhf
 Depends: ${misc:Depends}, ${shlibs:Depends}, libc6-dbg
 Conflicts: valgrind-callgrind
 Provides: valgrind-callgrind
