Remove Andrés from Maintainer field on his request.
Signed-off-by: Pierre Habouzit <madcoder@debian.org>

--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: valgrind
 Section: devel
 Priority: optional
-Maintainer: Andrés Roldán <aroldan@debian.org>
-Uploaders: Pierre Habouzit <madcoder@debian.org>
+Maintainer: Pierre Habouzit <madcoder@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), libc6-dev (>> 2.3.0), autotools-dev (>= 20100122.1),
   gdb, gcc-multilib [amd64], libc6-dev-i386 (>> 2.3.0) [amd64], docbook,
   docbook-xsl, docbook-xml, xsltproc
