--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 CROSS :=
-DEB_HOST_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 ifneq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
     CROSS :=  $(DEB_HOST_GNU_TYPE)
@@ -12,6 +12,8 @@ endif
 # configuration
 check_asm = $(shell echo 'void foo(void) { __asm__ volatile("$(1)"); }' | $(CROSS)gcc -x c -c - -o /dev/null 2>/dev/null && echo 1 || echo 0)
 
+CFLAGS := $(shell dpkg-buildflags --get CFLAGS)
+
 ifeq ($(DEB_HOST_ARCH_CPU),arm)
     # whether the toolchain *default* configuration enables ARMv7
     v7_asm := dmb
@@ -21,13 +23,11 @@ ifneq ($(has_v7),1)
     CFLAGS += -march=armv7-a
 endif
 endif
+export CFLAGS
 
 override_dh_auto_configure:
 	cat xfree-4.supp debian/debian.supp > debian.supp
-	./configure CFLAGS="$(CFLAGS)" \
-		--prefix=/usr \
-		--mandir=\$${prefix}/share/man \
-		--enable-tls
+	dh_auto_configure -- --host="$(DEB_HOST_GNU_TYPE)" --enable-tls
 
 override_dh_auto_test:
 	: # do nothing for now
