--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,15 @@ Source: valgrind
 Section: devel
 Priority: optional
 Maintainer: Pierre Habouzit <madcoder@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), libc6-dev (>> 2.3.0), autotools-dev (>= 20100122.1),
-  gdb, gcc-multilib [amd64], libc6-dev-i386 (>> 2.3.0) [amd64], docbook,
-  docbook-xsl, docbook-xml, xsltproc
+Build-Depends: debhelper (>= 7.0.50~),
+ autotools-dev,
+ gdb,
+ gcc-multilib [amd64],
+ libc6-dev-i386 [amd64],
+ docbook,
+ docbook-xsl,
+ docbook-xml,
+ xsltproc
 Standards-Version: 3.9.2
 Vcs-Browser: http://git.debian.org/?p=collab-maint/valgrind.git;a=summary
 Vcs-Git: git://git.debian.org/git/collab-maint/valgrind.git
