--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: valgrind
 Section: devel
 Priority: optional
-Maintainer: Pierre Habouzit <madcoder@debian.org>
+Maintainer: Alessandro Ghedini <ghedo@debian.org>
 Build-Depends: debhelper (>= 7.0.50~),
  autotools-dev,
  gdb,
