--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Alessandro Ghedini <ghedo@debian.org>
 Build-Depends: debhelper (>= 7.0.50~),
  autotools-dev,
+ bash-completion,
  gdb,
  gcc-multilib [amd64],
  libc6-dev-i386 [amd64],
