--- a/debian/rules
+++ b/debian/rules
@@ -3,21 +3,25 @@
 # this outputs 0 or 1 depending on whether a piece of assembly can be compiled
 # with the *default* gcc flags; this is used to test the toolchain *default*
 # configuration
-check_asm = $(shell echo 'void foo(void) { __asm__ volatile("$(1)"); }' | $(CROSS)gcc -x c -c - -o /dev/null 2>/dev/null && echo 1 || echo 0)
+check_asm = $(shell echo 'void foo(void) { __asm__ volatile("$(1)"); }' |   \
+	$(CROSS)gcc -x c -c - -o /dev/null 2>/dev/null && echo 1 || echo 0)
 
 CFLAGS   = $(shell dpkg-buildflags --get CFLAGS)
 CFLAGS  += $(shell dpkg-buildflags --get CPPFLAGS)
 LDFLAGS  = $(shell dpkg-buildflags --get LDFLAGS)
 
 ifeq ($(DEB_HOST_ARCH_CPU),arm)
-    # whether the toolchain *default* configuration enables ARMv7
-    v7_asm := dmb
-    has_v7 := $(call check_asm, $(v7_asm))
+	# whether the toolchain *default* configuration enables ARMv7
+	v7_asm := dmb
+	has_v7 := $(call check_asm, $(v7_asm))
 
-ifneq ($(has_v7),1)
-    CFLAGS += -march=armv7-a
+	ifneq ($(has_v7),1)
+		CFLAGS += -march=armv7-a
+	endif
 endif
-endif
+
+%:
+	dh $@ --parallel --with=autotools-dev,bash-completion
 
 override_dh_auto_configure:
 	cat xfree-4.supp debian/debian.supp > debian.supp
@@ -31,7 +35,6 @@ override_dh_auto_build:
 	$(MAKE) -C docs html-docs
 	$(MAKE) -C docs man-pages
 
-
 target=$(CURDIR)/debian/valgrind
 override_dh_install:
 	$(MAKE) install prefix=$(CURDIR)/debian/valgrind/usr
@@ -42,7 +45,3 @@ override_dh_install:
 	chown root.root $(target)/usr/bin/valgrind.bin $(target)/usr/bin/valgrind
 	chmod 755 $(target)/usr/bin/valgrind.bin $(target)/usr/bin/valgrind
 	install -p -m644 debian.supp $(target)/usr/lib/valgrind
-	install -p -d -m755 $(target)/usr/share/doc/valgrind/html
-
-%:
-	dh $@ --parallel --with=autotools-dev,bash-completion
