--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: valgrind
 Section: devel
 Priority: optional
 Maintainer: Alessandro Ghedini <ghedo@debian.org>
+Uploaders: Roland Stigge <stigge@debian.org>
 Build-Depends: debhelper (>= 7.0.50~),
  autotools-dev,
  bash-completion,
