--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,12 @@
 #!/usr/bin/make -f
 
+CROSS :=
+DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+ifneq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
+	CROSS :=  $(DEB_HOST_GNU_TYPE)
+endif
+
 # this outputs 0 or 1 depending on whether a piece of assembly can be compiled
 # with the *default* gcc flags; this is used to test the toolchain *default*
 # configuration
@@ -25,7 +32,8 @@ endif
 
 override_dh_auto_configure:
 	cat xfree-4.supp debian/debian.supp > debian.supp
-	dh_auto_configure -- --enable-tls CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)"
+	dh_auto_configure -- --host="$(DEB_HOST_GNU_TYPE)" --enable-tls \
+		CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)"
 
 override_dh_auto_test:
 	: # do nothing for now
