--- a/debian/control
+++ b/debian/control
@@ -38,6 +38,6 @@ Description: memory debugger and profiler
  programs called "tools". This is done by providing a way to instrument
  programs in very precise ways, making it relatively easy to support
  activities such as dynamic error detection and profiling. The Valgrind
- distribution currently includes three tools: a memory error detectors, a
+ distribution currently includes three tools: a memory error detector, a
  cache (time) profiler and a heap (space) profiler.
 Homepage: http://www.valgrind.org/
