Enable mpiwrap module
Closes: #565139

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  gdb,
  gcc-multilib [amd64],
  libc6-dev-i386 [amd64],
+ mpi-default-dev,
  docbook,
  docbook-xsl,
  docbook-xml,
