--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Homepage: http://www.valgrind.org/
 Package: valgrind
 Architecture: i386 amd64 s390x powerpc ppc64 armel armhf
 Depends: ${misc:Depends}, ${shlibs:Depends}, libc6-dbg
-Suggests: kcachegrind, alleyoop, valkyrie (>> 1.3.0)
+Suggests: valgrind-mpi, kcachegrind, alleyoop, valkyrie (>> 1.3.0)
 Recommends: gdb
 Description: instrumentation framework for building dynamic analysis tools
  Valgrind is a system for debugging and profiling Linux programs. With its tool
