--- a/debian/control
+++ b/debian/control
@@ -42,6 +42,20 @@ Description: instrumentation framework for building dynamic analysis tools
   * a second heap profiler that examines how heap blocks are used (DHAT)
   * a SimPoint basic block vector generator (BBV)
 
+Package: valgrind-dbg
+Priority: extra
+Section: debug
+Architecture: i386 amd64 s390x powerpc ppc64 armel armhf
+Depends: ${misc:Depends}, ${shlibs:Depends}, valgrind (= ${binary:Version})
+Description: instrumentation framework for building dynamic analysis tools (debug)
+ Valgrind is a system for debugging and profiling Linux programs. With its tool
+ suite you can automatically detect many memory management and threading bugs,
+ avoiding hours of frustrating bug-hunting and making your programs more stable.
+ You can also perform detailed profiling to help speed up your programs and use
+ Valgrind to build new tools.
+ .
+ This package provides the debug symbols for valgrind's tools and libraries.
+
 Package: valgrind-mpi
 Architecture: i386 amd64 s390x powerpc ppc64 armel armhf
 Depends: ${misc:Depends}, ${shlibs:Depends}, valgrind (= ${binary:Version})
