--- a/debian/rules
+++ b/debian/rules
@@ -42,6 +42,9 @@ override_dh_auto_build:
 	$(MAKE) -C docs html-docs
 	$(MAKE) -C docs man-pages
 
+override_dh_strip:
+	dh_strip --dbg-package=valgrind-dbg
+
 target=$(CURDIR)/debian/valgrind
 override_dh_install:
 	$(MAKE) install prefix=$(CURDIR)/debian/tmp/usr
