--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Package: valgrind
 Architecture: i386 amd64 s390x powerpc ppc64 armel armhf
 Depends: ${misc:Depends}, ${shlibs:Depends}, libc6-dbg
 Suggests: valgrind-mpi, kcachegrind, alleyoop, valkyrie (>> 1.3.0)
-Recommends: gdb
+Recommends: valgrind-dbg, gdb
 Description: instrumentation framework for building dynamic analysis tools
  Valgrind is a system for debugging and profiling Linux programs. With its tool
  suite you can automatically detect many memory management and threading bugs,
