--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: valgrind
 Section: devel
 Priority: optional
-Maintainer: Alessandro Ghedini <ghedo@debian.org>
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: Alessandro Ghedini <ghedo@debian.org>
 Build-Depends: debhelper-compat (= 13),
  gdb,
  gcc-multilib [amd64],
@@ -16,6 +17,7 @@ Standards-Version: 4.6.0
 Vcs-Git: https://salsa.debian.org/debian/valgrind.git
 Vcs-Browser: https://salsa.debian.org/debian/valgrind
 Homepage: http://www.valgrind.org/
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bookworm
 
 Package: valgrind
 Architecture: amd64 arm64 armhf i386 mips mipsel mips64 mips64el powerpc ppc64 ppc64el s390x x32
